# tools

./: .gitignore
apk_signing/: CMakeLists.txt
apk_signing/src/: main.c  xxtea.c
compress_image/: CMakeLists.txt  make.sh
compress_image/src/: main.c
image_encrypt/: CMakeLists.txt
image_encrypt/src/: main.c
keystore_generator/: CMakeLists.txt  make.sh
keystore_generator/src/: main.c
res_encrypt/: CMakeLists.txt
res_encrypt/src/: main.c  xxtea.c
update_ip/: CMakeLists.txt  update_ip.exe.stackdump
update_ip/src/: main.c
